[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytigon-gui"
version = "0.260628"
description = "Pytigon GUI"
authors = [{name = "Sławomir Chołaj", email = "slawomir.cholaj@gmail.com"}]
license = {text = "LGPLv3"}
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["dependencies"]

[project.gui-scripts]
ptigw = "pytigon.pytigon_run:run"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore::DeprecationWarning:fs.*",
    "ignore:.*ast\\.Ellipsis.*:DeprecationWarning:pscript.*",
]

[tool.setuptools.packages.find]
include = ["pytigon*"]
exclude = ["pytigon_lib*", "**/__pycache__", "__pycache__", "*.pyc"]
